--- a/index.css
+++ b/index.css
@@ -10,9 +10,41 @@
 html {
   display: block;
   width: 100%;
-  margin: 5% 0 auto;
 }
 
 body {
-  background-color: rgb(35, 35, 35);
+  margin: 0 auto;
+}
+
+.container {
+  position: absolute;
+  top: 25%;
+  left: 27%;
+}
+
+input {
+  box-shadow: 0px 2px 4px 2px #858ebc;
+  border: 0;
+  border-radius: 2px;
+  margin: 12px;
+  font-size: 16px;
+}
+
+.prompt-box {
+  color: #f9faffde;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin-bottom: 50px;
+  text-shadow: #858ebc -2px 2px 8px;
+}
+
+.content {    
+  width: 90%;
+  display: flex;
+  justify-content: flex-end;
+  flex-flow: row wrap;
+  font-size: 16px;
+  line-height: 22px;
 }
